package com.example.chessboard.ui

const val InteractiveChessBoardTestTag = "interactive-chess-board"
const val PositionSearchClearBoardTestTag = "position-search-clear-board"
const val PositionSearchInitialPositionTestTag = "position-search-initial-position"
const val PositionSearchWhiteShortCastleTestTag = "position-search-white-short-castle"
const val PositionSearchWhiteLongCastleTestTag = "position-search-white-long-castle"
const val PositionSearchBlackShortCastleTestTag = "position-search-black-short-castle"
const val PositionSearchBlackLongCastleTestTag = "position-search-black-long-castle"
...
